--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>kjl</groupId>
     <artifactId>jkjdf</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  <maven.compiler.release>13</maven.compiler.release>
+</properties>
     <build>
         <plugins>
             <plugin>
@@ -17,7 +21,13 @@
                     <target>8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+            </plugin>
         </plugins>
+        
     </build>
     <dependencies>
         <dependency>
